Fixed scrollbar issue.

--- a/src/app/Components/InteractiveLegend/css/InteractiveLegend.scss
+++ b/src/app/Components/InteractiveLegend/css/InteractiveLegend.scss
@@ -13,7 +13,7 @@
   }
 
   .esri-interactive-legend__layer-row-container {
-    padding-bottom: 3%;
+    padding-bottom: 2%;
   }
 
   .esri-interactive-legend__main-container {
@@ -165,6 +165,7 @@
   .esri-interactive-legend__interactive-styles {
     background-color: #f5f5f5;
     height: 100%;
+    overflow: hidden;
 
     .esri-interactive-legend__layer-table {
       display: -webkit-box;
